// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VsCodeMcpExporter > Snapshot tests > all severities golden JSON output 1`] = `
{
  "content_hash": "54936332c02b9fe00fd31c4400e21110c090c753b1428b381404a8c53d62f50e",
  "generated_by": "AlignTrue",
  "rules": [
    {
      "applies_to": [
        "**/*",
      ],
      "guidance": "Never commit secrets or API keys to version control.
",
      "id": "security.no-secrets",
      "severity": "error",
    },
    {
      "applies_to": [
        "src/**/*.ts",
      ],
      "guidance": "All features should have tests.
",
      "id": "testing.require-tests",
      "severity": "warn",
    },
    {
      "applies_to": [
        "**/*.ts",
      ],
      "guidance": "Use const instead of let when variables are not reassigned.
",
      "id": "style.prefer-const",
      "severity": "info",
    },
  ],
  "version": "v1",
}
`;

exports[`VsCodeMcpExporter > Snapshot tests > mixed vendor fields golden output 1`] = `
{
  "content_hash": "a1c8ca53396ae41d2c779ce716175f9424d6ca899f11498efed9cda57fc3e610",
  "fidelity_notes": [
    "Vendor-specific metadata for other agents not extracted to MCP config: copilot, cursor",
  ],
  "generated_by": "AlignTrue",
  "rules": [
    {
      "applies_to": [
        "**/*.ts",
      ],
      "code_action_kind": "quickfix",
      "diagnostic_severity": "Warning",
      "guidance": "Use ESLint for consistent code quality.
",
      "id": "linting.use-eslint",
      "severity": "warn",
    },
  ],
  "version": "v1",
}
`;

exports[`VsCodeMcpExporter > Snapshot tests > multiple rules golden JSON output 1`] = `
{
  "content_hash": "c73a1e4c34a4fde318791878e9dac71bde4790d54590b146047f5ab8de07cd60",
  "generated_by": "AlignTrue",
  "rules": [
    {
      "applies_to": [
        "**/*",
      ],
      "guidance": "Never commit secrets or API keys to version control.
",
      "id": "security.no-secrets",
      "severity": "error",
    },
    {
      "applies_to": [
        "**/*.ts",
      ],
      "guidance": "All features should have tests.
",
      "id": "testing.require-tests",
      "severity": "warn",
    },
    {
      "applies_to": [
        "README.md",
      ],
      "guidance": "Keep README updated with significant changes.
",
      "id": "docs.update-readme",
      "severity": "info",
    },
  ],
  "version": "v1",
}
`;

exports[`VsCodeMcpExporter > Snapshot tests > single rule golden JSON output 1`] = `
{
  "content_hash": "d95d5b9bfd162460fd1b204b868c21e1d19868cd97f069c193b68eff3244f869",
  "generated_by": "AlignTrue",
  "rules": [
    {
      "applies_to": [
        "**/*.ts",
      ],
      "guidance": "All features must have tests to ensure reliability.
",
      "id": "testing.require-tests",
      "severity": "warn",
    },
  ],
  "version": "v1",
}
`;

exports[`VsCodeMcpExporter > Snapshot tests > with vendor.vscode extracted golden output 1`] = `
{
  "content_hash": "6b4582b08f822214f9b5dbd1b1fe412f7c2727357b4e5d195652d752526604c1",
  "generated_by": "AlignTrue",
  "rules": [
    {
      "applies_to": [
        "**/*.ts",
        "**/*.tsx",
      ],
      "diagnostic_code": "format-001",
      "guidance": "Use Prettier for consistent code formatting.
",
      "id": "formatting.use-prettier",
      "quick_fix_available": true,
      "severity": "warn",
      "workbench_setting": "editor.formatOnSave",
    },
  ],
  "version": "v1",
}
`;
